tests/golden/err-import-missing-file/expected_error.txt
error: import 先のファイル `missing.clum` が見つかりません
 --> main.clum:1:2
  |
1 | @./missing
  |  ^^^^^^^^^
